--- a/index.html
+++ b/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://openlayers.org/en/v4.5.0/css/ol.css" type="text/css">
-    <style>
-        .map {
-            height: 400px;
-            width: 100%;
-        }
-    </style>
-    <script src="https://openlayers.org/en/v4.5.0/build/ol.js" type="text/javascript"></script>
-    <title>OpenLayers example</title>
+    <title>Web-Map</title>
+    <!--<script src="https://openlayers.org/en/v4.5.0/build/ol.js" type="text/javascript"></script>-->
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <!-- loading the stylesheet for the application -->
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <!-- loading the OpenLayers javaScript file -->
+    <script src="ol.js"></script>
+
+    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href= "css/slider.css" />
+    <link rel="stylesheet" type="text/css" href="css/slicebox.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link href="css/agency.min.css" rel="stylesheet">
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="css/creative.min.css" rel="stylesheet">
+
+
 </head>
 <body>
-<h2>My Map</h2>
-<div id="map" class="map"></div>
-<script type="text/javascript">
-    var map = new ol.Map({
-        target: 'map',
-        layers: [
-            new ol.layer.Tile({
-                source: new ol.source.OSM()
-            })
-        ],
-        view: new ol.View({
-            center: ol.proj.fromLonLat([37.41, 8.82]),
-            zoom: 4
-        })
-    });
-</script>
-</body>
-
+<!-- the div holding the map -->
+<div id="map">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading" style="font-size: 50px; font-weight: 600">Project Resources</h2>
+                <h3 class="section-subheading text-muted">Below are our resources for creating this project:</h3>
+            </div>
+        </div>
+    </div>
+    <!-- loading the javaScript file containing the properties of the map -->
+    <script type="text/javascript" src="web-map.js"></script>
+</div>
 </body>
 </html>
