--- a/index.html
+++ b/index.html
@@ -1,39 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Web-Map</title>
-    <!--<script src="https://openlayers.org/en/v4.5.0/build/ol.js" type="text/javascript"></script>-->
+    <title>Election Vote Preference Site</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+
     <!-- loading the stylesheet for the application -->
     <link rel="stylesheet" type="text/css" href="style.css"/>
-    <!-- loading the OpenLayers javaScript file -->
+
+    <!-- loading the OpenLayers3 javaScript file -->
     <script src="ol.js"></script>
 
+    <!-- CSS font for search box and banner-->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- CSS style for search box and banner-->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href= "css/slider.css" />
     <link rel="stylesheet" type="text/css" href="css/slicebox.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link href="css/agency.min.css" rel="stylesheet">
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Theme CSS -->
     <link href="css/creative.min.css" rel="stylesheet">
 
 
 </head>
 <body>
-<!-- the div holding the map -->
-<div id="map">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading" style="font-size: 50px; font-weight: 600">Project Resources</h2>
-                <h3 class="section-subheading text-muted">Below are our resources for creating this project:</h3>
+    <!-- Add a banner at top of the pages -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <a class="navbar-brand page-scroll" style="color:#696969; font-size: 2.4em; -webkit-text-stroke: 1px white ">Election Vote Preference Site</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <!--Add the search box at upper right corner-->
+                        <input type="text" name="search" placeholder="Search..">
+                    </li>
+                </ul>
             </div>
         </div>
+    </nav>
+
+    <!-- the div holding the map -->
+    <div id="mapc">
+        <div id = "map">
+        <!-- loading the javaScript file containing the properties of the map -->
+        <script type="text/javascript" src="web-map.js"></script>
+        </div>
     </div>
-    <!-- loading the javaScript file containing the properties of the map -->
-    <script type="text/javascript" src="web-map.js"></script>
-</div>
+
 </body>
 </html>
